# note_api

./: .dockerignore  .editorconfig  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg
.ci/api/: Dockerfile
app/: celeryapp.py  database.py  main.py  router.py
app/api/v1/endpoints/: auth.py  notes.py  users.py
app/core/: config.py
app/migration/: env.py
app/migration/versions/: 4295c71f7a0f_initial_revision.py
app/models/: notes.py
app/models/api/v1/: notes.py  users.py
app/schemas/: notes.py  users.py
app/services/: auth_service.py  notes_service.py  users_service.py
app/utils/: auth.py  exceptions.py  yandex_speller.py
